crates/buiy_verify/tests/verify_headless/snapshots/button.resting.forced.desktop.fc1.dpr1.cpu.snap
---
source: crates/buiy_verify/tests/verify_headless/coverage_layout.rs
expression: button.resting.forced.desktop.fc1.dpr1.cpu
---
# buiy-layout-dump v1
button pos=0,0 size=50,48
  entity#82 pos=8,14 size=34,20
