crates/buiy_verify/tests/verify_headless/snapshots/button.resting.forced.phone.fc1.dpr1.cpu.snap
---
source: crates/buiy_verify/tests/verify_headless/coverage_layout.rs
expression: button.resting.forced.phone.fc1.dpr1.cpu
---
# buiy-layout-dump v1
button pos=0,0 size=16,48
  entity#36 pos=8,24 size=0,0
